[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm"
dynamic = ["version"]
description = "A Python package for simulating Geometric Brownian Motion."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Lucy", email = "zx332@cam.ac.uk" },
    { name = "Boris", email = "boris.bolliet@gmail.com" }
    
]
keywords = ["Brownian Motion", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "argparse",
    "datetime",
    "importlib.resources"
]

[project.urls]
"Source" = "https://github.com/zx332-2025/Brownian_motion"
"Issues" = "https://github.com/zx332-2025/Brownian_motion/issues"



[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pygbm" = ["data/*"]

[project.scripts]
pygbm = "pygbm.cli:main"

